--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,12 @@
     "author": "Jerry",
     "browser_specific_settings": {
         "gecko": {
-            "id": "jerryxfu-home-island@github.io"
+            "id": "jerryxfu-home-island@github.io",
+            "data_collection_permissions": {
+                "required": [
+                    "none"
+                ]
+            }
         }
     },
     "chrome_url_overrides": {
