--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "Home Island",
-    "version": "1.0.0",
-    "description": "A custom home page with beautiful backgrounds and personalized styles",
+    "version": "1.1.0",
+    "description": "A beautiful, minimalist browser extension that transforms your new tab page into a dynamic home island",
     "author": "Jerry",
     "browser_specific_settings": {
         "gecko": {
