--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "manifest_version": 3,
     "name": "Home Island",
-    "version": "1.1.0",
+    "version": "1.0.0",
     "description": "A beautiful, minimalist browser extension that transforms your new tab page into a dynamic home island",
     "author": "Jerry",
     "browser_specific_settings": {
         "gecko": {
-            "id": "jerryxfu-home-island@github.io",
+            "id": "jerryxf-home-island@github.io",
             "data_collection_permissions": {
                 "required": [
                     "none"
